# qeth

./: .coverage  .gitignore  .secrets.baseline  CLAUDE.md  Falkon.pyi  PRIVACY.md  README.md  pyproject.toml  resume
.github/workflows/: appimage.yml
docs/: ARCHITECTURE.md  ens-app.md  eth-browsing.md  race-audit.md  signers-qr.md  signers.md  verified-reads.md  ws-subscriptions.md
experiments/: README.md  cache_sim_bench.py  cache_time.py  cache_time_batch.py
extensions/: README.md
extensions/falkon/: README.md
extensions/falkon/qeth_connector/: metadata.desktop
extensions/firefox/: qeth-0.20.0.xpi  qeth-0.22.0.xpi
extensions/webext/: README.md  build.py  config.js  manifest.json  popup.js  relay.js
integrations/falkon/: README.md
integrations/falkon/qeth_connector/: __init__.py  bridge.py  metadata.desktop  probe.py  provider.js  relay.js  settings.py  toolbar.py
integrations/webext/: README.md  background.js  build.py  manifest.json  popup.html  popup.js  relay.js
qeth/: __init__.py  __main__.py  abi.py  abi_cache.py  activity_cache.py  alerts.py  async_chain.py  balance_ledger.py  branding.py  chain.py  chain_rpc_dialog.py  chainlist.py  chains.py  contract_identity.py  dialog.py  ens.py  ens_app.py  ens_write.py  formatting.py  fsatomic.py  helios.py  hot_wallet.py  icons.py  import_sources.py  ledger.py  ledger_hid.py  live_watcher.py  notify.py  plugin.py  plugin_toggle.py  prices.py  pyevm_fork.py  qr_discover.py  qr_exchange_dialog.py  qr_scan.py  qr_signer.py  risk.py  rpc.py  signer_interaction.py  signing.py  (+16 more)
qeth/data/: top_tokens.json
qeth/plugins/: __init__.py  ens.py  registry.py  sign_message.py  tokens.py  transactions.py  tx_summary.py  wallets.py
qeth/plugins/approvals/: __init__.py  cache.py  discovery.py  revoke_queue.py
qeth/plugins/ens/: __init__.py  ens_app.py  ens_write.py
qeth/plugins/tokens/: __init__.py  balance_ledger.py
qeth/plugins/transactions/: __init__.py  contract_identity.py  live_watcher.py  simulate.py  tx_summary.py
qeth/plugins/wallets/: __init__.py  import_sources.py
qeth/pricing/: __init__.py  base.py  defillama.py  native.py  onchain.py
qeth/qr/: __init__.py  account.py  bytewords.py  derive.py  eth.py  fountain.py  multipart.py  schemes.py  ur.py
qeth/signers/: __init__.py  base.py  hot.py  interaction.py  ledger.py  qr.py  watch_only.py
qeth/token_discovery/: __init__.py  own_history.py  sources.py  vault_provenance.py
scripts/: check.sh  gen_top_tokens.py  keycard_fountain_gui.py  release.sh
tests/: conftest.py  profile_startup.py  test_abi.py  test_abi_cache.py  test_activity_cache.py  test_alerts.py  test_approvals_actions.py  test_approvals_cache.py  test_approvals_discovery.py  test_approvals_panel.py  test_approvals_queue.py  test_approvals_scan.py  test_approvals_soft_labels.py  test_approvals_stateful.py  test_async_chain.py  test_balance_ledger.py  test_chain.py  test_chain_rpc_dialog.py  test_chainlist.py  test_contract_identity.py  test_ens.py  test_ens_app.py  test_ens_stateful.py  test_ens_write.py  test_falkon_provider.py  test_formatting.py  test_fsatomic.py  test_helios.py  test_hot_wallet.py  test_icon_fetch_guard.py  test_import_sources.py  test_ledger.py  test_ledger_hid.py  test_lint.py  test_live_anvil.py  test_live_watcher.py  test_live_wiring.py  test_main.py  test_network_chain.py  test_network_prices.py  (+56 more)
