[project]
name = "qeth"
# Single source of truth: qeth/__init__.py ``__version__`` (read statically
# by setuptools, no import). Keeps the package version and USER_AGENT in
# lockstep — they drifted before (pyproject said 0.9.4 while __version__
# was still 0.9.0, so the UA shipped as qeth/0.9.0).
dynamic = ["version"]
description = "Qt-based Ethereum wallet with Ledger support, Frame-compatible JSON-RPC"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
# PySide6 is intentionally NOT listed here. On Linux desktops with a configured
# Qt theme (qt5ct/qt6ct, KDE Breeze, etc.), the PyPI PySide6 wheel ships its
# own Qt build that lacks the matching platform-theme plugins, so themes are
# silently ignored. Use system PySide6 instead:
#   uv venv --system-site-packages
#   uv pip install -e .
# If you don't have system PySide6, install the [bundled] extra:
#   uv pip install -e .[bundled]
dependencies = [
    "ledgereth>=0.10",
    "aiohttp>=3.9",
    "segno>=1.6",
    "eth-abi>=5.0",
    "web3>=7",
]

[project.optional-dependencies]
bundled = ["PySide6>=6.6"]
# Local transaction simulation (event preview before broadcast). revm
# (Rust) via PyO3 — one compiled wheel, ~no Python dep tree; the app
# degrades gracefully to "no preview" when it's absent. Install with:
#   uv pip install -e '.[simulate]'
simulate = ["pyrevm>=0.3"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8",
    "pytest-qt>=4.4",
]

[tool.pytest.ini_options]
# Network tests exercise real Blockscout / DefiLlama / GoPlus / Curve /
# chain RPC endpoints; they're skipped by default to keep `pytest` fast
# and hermetic. To run only them:    uv run pytest -m network
# To run everything (offline + online): uv run pytest -m ''
markers = [
    "network: requires live network and external services",
]
addopts = "-m 'not network'"
# pytest-qt: tell it which Qt binding we use. The "offscreen" Qt
# platform plugin is set in tests/conftest.py before QApplication is
# created, so UI tests don't pop windows on the developer's screen
# (and also work in CI / SSH sessions without a display).
qt_api = "pyside6"

[tool.mypy]
python_version = "3.10"
# Enforced scope: the WHOLE package — the Qt-free core AND the PySide6 UI
# layer — fully type-checked, with NO per-module error-code exemptions. The
# flat→scoped Qt-enum migration is complete (always Qt.AlignmentFlag.AlignLeft,
# never the deprecated flat Qt.AlignLeft), so `attr-defined` is enforced on the
# UI layer too — keep new Qt code scoped to stay clean. Run `uv run mypy` (no
# args) to check the enforced set; tests/test_typing.py gates it.
files = [
    # --- Qt-free core (fully checked) ---
    "qeth/__init__.py",
    "qeth/chain.py",
    "qeth/async_chain.py",
    "qeth/chains.py",
    "qeth/store.py",
    "qeth/tokens.py",
    "qeth/tokenlists.py",
    "qeth/token_metadata.py",
    "qeth/prices.py",
    "qeth/abi.py",
    "qeth/abi_cache.py",
    "qeth/contract_identity.py",
    "qeth/simulate.py",
    "qeth/activity_cache.py",
    "qeth/transactions.py",
    "qeth/transactions_cache.py",
    "qeth/tx_activity.py",
    "qeth/wallet_cache.py",
    "qeth/risk.py",
    "qeth/hot_wallet.py",
    "qeth/import_sources.py",
    "qeth/chainlist.py",
    "qeth/rpc.py",
    # --- PySide6 UI layer (fully checked, attr-defined enforced) ---
    "qeth/__main__.py",
    "qeth/ui.py",
    "qeth/live_watcher.py",
    "qeth/plugin.py",
    "qeth/plugins/wallets.py",
    "qeth/plugins/tokens.py",
    "qeth/plugins/transactions.py",
    "qeth/plugins/tx_summary.py",
    "qeth/plugins/sign_message.py",
    "qeth/icons.py",
    "qeth/tray.py",
    "qeth/ledger.py",
    "qeth/signing.py",
    "qeth/alerts.py",
    "qeth/branding.py",
    "qeth/formatting.py",
    "qeth/ens.py",
    "qeth/chain_rpc_dialog.py",
    "qeth/toptokens.py",
]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

# Third-party packages without (complete) type stubs. Suppress
# "missing import" noise so the check stays focused on our own code.
[[tool.mypy.overrides]]
module = [
    "ledgereth.*",
    "pyrevm.*",
    "segno.*",
    "web3.*",
    "eth_abi.*",
    "eth_utils.*",
    "hexbytes.*",
    "rlp.*",
    "eth_account.*",
]
ignore_missing_imports = true

[project.scripts]
qeth = "qeth.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "qeth.__version__"}

[tool.setuptools.packages.find]
include = ["qeth*"]

[tool.setuptools.package-data]
qeth = ["assets/native/*.png", "assets/chains/*.png", "assets/logos/*.svg", "data/top_tokens.json"]
