[project]
name = "qeth"
# Single source of truth: qeth/__init__.py ``__version__`` (read statically
# by setuptools, no import). Keeps the package version and USER_AGENT in
# lockstep — they drifted before (pyproject said 0.9.4 while __version__
# was still 0.9.0, so the UA shipped as qeth/0.9.0).
dynamic = ["version"]
description = "Qt-based Ethereum wallet with Ledger support, Frame-compatible JSON-RPC"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
# PySide6 is intentionally NOT listed here. On Linux desktops with a configured
# Qt theme (qt5ct/qt6ct, KDE Breeze, etc.), the PyPI PySide6 wheel ships its
# own Qt build that lacks the matching platform-theme plugins, so themes are
# silently ignored. Use system PySide6 instead:
#   uv venv --system-site-packages
#   uv pip install -e .
# If you don't have system PySide6, install the [bundled] extra:
#   uv pip install -e .[bundled]
dependencies = [
    "ledgereth>=0.10",
    "aiohttp>=3.9",
    "segno>=1.6",
    "web3>=7",
    # The eth stack web3 pulls in, but which qeth ALSO imports directly —
    # declared explicitly (not leaned on as web3 transitives) so a self-
    # contained install can't break when web3's dependency graph shifts. Same
    # discipline that the `frame`/cryptography split enforced; deptry checks it.
    "eth-abi>=5.0",
    "eth-account>=0.11",
    "eth-keys>=0.5",     # secp256k1 point math for BIP32 CKDpub (qeth/qr/derive)
    "eth-typing>=4",
    "eth-utils>=4",
    "hexbytes>=1",
    "requests>=2.31",
    "rlp>=4",
]

[project.optional-dependencies]
bundled = ["PySide6>=6.6"]
# Local transaction simulation (event preview before broadcast) on RPCs
# without eth_simulateV1. py-evm (pure Python, EF-maintained): ships on
# every platform/Python — unlike pyrevm, whose wheels stop at Linux
# cp312 with no aarch64 — and its fork state DB is OUR code (the seam
# where proof-verified reads plug in later; see docs/eth-browsing.md).
# Speed is irrelevant here: a fork simulation is network-round-trip-
# bound, not EVM-bound. The app degrades gracefully to "no preview"
# when absent. Install with:
#   uv pip install -e '.[simulate]'
simulate = ["py-evm>=0.10"]
# Decrypting Frame ring-signer account exports ("Import from Frame"). Only
# that one code path needs cryptography (a heavy Rust-built dep), and the
# import is guarded — without this extra, Frame import fails with a clear
# "install qeth[frame]" message instead of a traceback. Everything else
# (incl. signing) works without it. Install with:
#   uv pip install -e '.[frame]'
frame = ["cryptography>=42"]
# Air-gapped QR signer (Keystone / Keycard Shell — BC-UR + EIP-4527). The
# headless codec (qeth/qr/: bytewords + single-part UR + the eth-sign-request /
# eth-signature registry) uses CBOR; the exchange dialog decodes the response QR
# with zxing-cpp. The camera itself is system QtMultimedia (ships with PySide6 —
# not a PyPI dep; a distro package for system installs, bundled in the PyPI
# PySide6 the flatpak/appimage use). See docs/signers-qr.md. Install with:
#   uv pip install -e '.[qr]'
qr = ["cbor2>=5.4", "zxing-cpp>=2", "Pillow>=10"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.14",       # lint gate (tests/test_lint.py)
    "ty>=0.0.50",       # type checker (preview); run via scripts/check.sh
    "pytest>=8",
    "pytest-qt>=4.4",
    "hypothesis>=6",    # stateful/property tests (tests/test_ens_stateful.py)
    # The simulate extra, mirrored here so the fork-engine tests always
    # run the real (pure-Python) EVM rather than skipping.
    "py-evm>=0.10",
    # The frame extra, mirrored so the Frame-import decrypt tests run
    # against the real cryptography rather than relying on system packages.
    "cryptography>=42",
    # The qr extra, mirrored so the BC-UR / EIP-4527 codec + QR-decode tests run.
    "cbor2>=5.4",
    "zxing-cpp>=2",
    "Pillow>=10",
]

[tool.uv]
# Supply-chain policy: never resolve a package version newer than ~1 week old.
# A malicious/compromised fresh upload is usually caught + yanked within days,
# so a one-week soak before adopting any release blunts that. uv evaluates this
# RELATIVE duration at resolution time, so it ROLLS automatically — no date to
# maintain. Applies to every `uv lock` (incl. `--upgrade`).
#
# Bump deps:   uv lock --upgrade && uv sync --inexact && uv audit
# A fresh SECURITY fix can be pulled forward past the cutoff for one package,
# and it STICKS (a later plain `uv lock` won't revert an already-locked
# version):
#   uv lock --upgrade-package <pkg> --exclude-newer-package <pkg>=<recent-date>
# That's how aiohttp sits on 3.14.1 here, ahead of the cutoff (6 CVEs fixed).
exclude-newer = "1 week"

[tool.uv.exclude-newer-package]
# ty is a fast-moving preview tool we run locally (never shipped) and track at
# its latest; its pin is otherwise unsatisfiable under the 1-week cutoff.
# Exempt it — effectively no cutoff for ty.
ty = "2099-01-01T00:00:00Z"

[tool.pytest.ini_options]
# Network tests exercise real Blockscout / DefiLlama / GoPlus / Curve /
# chain RPC endpoints; they're skipped by default to keep `pytest` fast
# and hermetic. To run only them:    uv run pytest -m network
# To run everything (offline + online): uv run pytest -m ''
markers = [
    "network: requires live network and external services",
]
addopts = "-m 'not network'"
# pytest-qt: tell it which Qt binding we use. The "offscreen" Qt
# platform plugin is set in tests/conftest.py before QApplication is
# created, so UI tests don't pop windows on the developer's screen
# (and also work in CI / SSH sessions without a display).
qt_api = "pyside6"

[tool.mypy]
python_version = "3.10"
# Resolve the out-of-tree Falkon connector (its own `qeth_connector` package)
# and the root-level `Falkon.pyi` stub for the browser-plugin API.
mypy_path = ["integrations/falkon", "."]
# Enforced scope: the WHOLE package — the Qt-free core AND the PySide6 UI
# layer — fully type-checked, with NO per-module error-code exemptions. The
# flat→scoped Qt-enum migration is complete (always Qt.AlignmentFlag.AlignLeft,
# never the deprecated flat Qt.AlignLeft), so `attr-defined` is enforced on the
# UI layer too — keep new Qt code scoped to stay clean. Run `uv run mypy` (no
# args) to check the enforced set; tests/test_typing.py gates it.
files = [
    # --- Qt-free core (fully checked) ---
    "qeth/__init__.py",
    "qeth/chain.py",
    "qeth/async_chain.py",
    "qeth/chains.py",
    "qeth/store.py",
    "qeth/fsatomic.py",
    "qeth/single_instance.py",
    "qeth/token_discovery",
    "qeth/token_metadata.py",
    "qeth/pricing",
    "qeth/abi.py",
    "qeth/abi_cache.py",
    "qeth/pyevm_fork.py",
    "qeth/helios.py",
    "qeth/verified.py",
    "qeth/activity_cache.py",
    "qeth/transactions.py",
    "qeth/transactions_cache.py",
    "qeth/tx_activity.py",
    "qeth/hot_wallet.py",
    "qeth/chainlist.py",
    "qeth/rpc.py",
    # --- PySide6 UI layer (fully checked, attr-defined enforced) ---
    "qeth/__main__.py",
    "qeth/ui.py",
    "qeth/plugin.py",
    "qeth/plugin_toggle.py",
    "qeth/plugins/registry.py",
    "qeth/plugins/wallets",
    "qeth/plugins/tokens",
    "qeth/plugins/ens",
    "qeth/plugins/transactions",
    "qeth/plugins/sign_message.py",
    "qeth/icons.py",
    "qeth/tray.py",
    "qeth/notify.py",
    "qeth/ledger.py",
    "qeth/ledger_hid.py",
    "qeth/signing.py",
    "qeth/signers/__init__.py",
    "qeth/signers/base.py",
    "qeth/signers/interaction.py",
    "qeth/signers/ledger.py",
    "qeth/signers/hot.py",
    "qeth/signers/watch_only.py",
    "qeth/signers/qr.py",
    "qeth/signer_interaction.py",
    "qeth/qr_signer.py",
    "qeth/qr_scan.py",
    "qeth/qr_exchange_dialog.py",
    "qeth/qr/__init__.py",
    "qeth/qr/bytewords.py",
    "qeth/qr/ur.py",
    "qeth/qr/fountain.py",
    "qeth/qr/multipart.py",
    "qeth/qr/eth.py",
    "qeth/qr/derive.py",
    "qeth/qr/account.py",
    "qeth/qr/schemes.py",
    "qeth/qr_discover.py",
    "qeth/alerts.py",
    "qeth/dialog.py",
    "qeth/branding.py",
    "qeth/formatting.py",
    "qeth/ens.py",
    "qeth/chain_rpc_dialog.py",
    # The Falkon browser-connector plugin (out-of-tree package; uses the
    # root Falkon.pyi stub). Same scoped-Qt-enum rules apply.
    "integrations/falkon/qeth_connector",
]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

# Third-party packages without (complete) type stubs. Suppress
# "missing import" noise so the check stays focused on our own code.
[[tool.mypy.overrides]]
module = [
    "ledgereth.*",
    "eth.*",
    "eth_typing.*",
    "segno.*",
    "web3.*",
    "ens.*",
    "eth_abi.*",
    "eth_utils.*",
    "hexbytes.*",
    "rlp.*",
    "eth_account.*",
    # System QtMultimedia (ships with PySide6, not pip-installable here) — the
    # camera in the QR exchange dialog. Lazily imported; absent on this dev host.
    "PySide6.QtMultimedia",
    "PySide6.QtMultimediaWidgets",
]
ignore_missing_imports = true

# zxing-cpp 3.1.0 ships a .pyi whose BarcodeFormat enum has a member literally
# named `None` (`None = 0`) — a Python syntax error mypy 2.2 rejects. It's a
# runtime-fine C++ binding, so skip following its (broken) stub rather than let
# an upstream stub bug fail our gate. follow_imports_for_stubs extends `skip` to
# the .pyi (otherwise mypy parses stubs even when the module import is skipped).
[[tool.mypy.overrides]]
module = "zxingcpp"
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"    # match [tool.mypy] python_version

[tool.ruff.lint]
# Start with pyflakes (E9 syntax + F: unused imports/vars, redefinitions,
# undefined names) — high signal, no style bikeshed. tests/test_lint.py
# gates it, mirroring the mypy gate.
#
# E402 (module-import-not-at-top) is deliberately NOT enabled: qeth uses
# lazy/deferred module imports on purpose — chain._ensure_heavy_imports,
# async_chain._ensure_async_imports, and the Flatpak Qt setup in __main__ —
# which the rule would wrongly flag. Broaden to E/W/I/B later via deliberate,
# reviewed passes (and keep E402 off, or per-file-ignore the lazy modules).
#
# RUF012 (mutable class default → mark ClassVar) is on: it documents that a
# class-level constant is shared, not a per-instance mutable-default footgun.
#
# UP (pyupgrade) keeps annotations on modern py310 syntax: X | None over
# Optional[X], list/tuple over List/Tuple, unquoted forward refs. UP031
# (printf → format) is excluded — string formatting is a separate concern,
# not annotation modernization, and left as-is for now.
select = ["E9", "F", "RUF012", "UP"]
ignore = ["UP031"]

[tool.ruff.lint.per-file-ignores]
# Test stubs/fixtures use shared class-level lists as quick recorders
# (re-created per test, so harmless) — ClassVar discipline is a
# production-code concern, not worth imposing on scaffolding.
"tests/**" = ["RUF012"]

[tool.deptry]
# Dependency hygiene checker (`uvx deptry .`): catches modules imported but
# not declared (the cryptography-class bug) and declared-but-unused deps. Run
# it after touching imports/deps. The remaining noise is all by-design:
#   - PySide6: deliberately NOT a hard dep — system-site-packages on Linux or
#     the [bundled] extra (see the header above). deptry sees the import but
#     not the runtime provision either way.
#   - Falkon: the host browser's plugin API, present only inside Falkon.
#   - py-evm imports as `eth` (+ owns `eth.*`); web3 ships the `ens` module.
known_first_party = ["qeth_connector"]

[tool.deptry.package_module_name_map]
py-evm = ["eth"]
web3 = ["web3", "ens"]
# zxing-cpp's import name drops the hyphen; Pillow imports as PIL.
zxing-cpp = ["zxingcpp"]
Pillow = ["PIL"]

[tool.deptry.per_rule_ignores]
# DEP001 = imported but undeclared; DEP002 = declared but unused.
DEP001 = ["PySide6", "Falkon"]
DEP002 = ["PySide6"]

[project.scripts]
qeth = "qeth.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "qeth.__version__"}

[tool.setuptools.packages.find]
include = ["qeth*"]

[tool.setuptools.package-data]
qeth = ["assets/native/*.png", "assets/chains/*.png", "assets/logos/*.svg", "data/top_tokens.json"]
